--- a/base.conf
+++ b/base.conf
@@ -4,7 +4,7 @@
 #
 # Variables
 # <HOSTNAME> - Hostname of ADC (Requires Reboot)
-#
+# <NSIP> - NSIP of ADC
 ######
 set ns hostName <HOSTNAME>
 set ns param -cip ENABLED X-Forwarded-For -cookieversion 1 -timezone "GMT-04:00-EDT-America/New_York"
