Updated CLI string

--- a/base.conf
+++ b/base.conf
@@ -9,7 +9,7 @@
 set ns hostName <HOSTNAME>
 set ns param -cip ENABLED X-Forwarded-For -cookieversion 1 -timezone "GMT-04:00-EDT-America/New_York"
 
-set system parameter -promptString "%u@%h"
+set system parameter -promptString "%u@%h-%s"
 set cli mode -color ON
 
 enable ns feature LB CS SSL GSLB REWRITE RESPONDER
