Update to Best Practices

--- a/base.conf
+++ b/base.conf
@@ -3,23 +3,91 @@
 # Jacob Wilson - jwilson@SSL.us
 #
 # Variables
-# <HOSTNAME> - Hostname of ADC (Requires Reboot)
-# <NSIP> - NSIP of ADC
+# ${HOSTNAME} - Hostname of ADC (Requires Reboot)
+# ${NSIP} - NSIP of ADC
+#
+# Manual Operations
+# - Disable Unused Interfaces
+# - Disable HAMON on Disabled Interfaces AND member interfaces of monitored channels
+# - create dhParam /nsconfig/ssl/ECDHE.key -gen 5 2048
 ######
-set ns hostName <HOSTNAME>
+
+set system user nsroot -password SuperSecretPW1
+
+## System
+set ns hostName ${HOSTNAME}
 set ns param -cip ENABLED X-Forwarded-For -cookieversion 1 -timezone "GMT-04:00-EDT-America/New_York"
-
 set system parameter -promptString "%u@%h-%s"
+set system user nsroot -externalAuth DISABLED
 set cli mode -color ON
-
-enable ns feature LB CS SSL GSLB REWRITE RESPONDER
+enable ns feature LB CS SSL GSLB REWRITE RESPONDER CMP
 disable ns mode L3 Edge
+disable ns feature callhome
+set ns ip ${NSIP} -restrictAccess ENABLED -gui SECUREONLY -telnet DISABLED
 
-set ssl parameter -denySSLReneg NONSECURE
-set ns tcpParam -nagle ENABLED
-set ns httpParam -dropInvalReqs ON
+## TCP/HTTP Tweaks
+set ns tcpProfile nstcp_default_profile -WS ENABLED -SACK ENABLED -nagle ENABLED
+set ns httpProfile nshttp_default_profile -dropInvalReqs ENABLED -markHttp09Inval ENABLED -markConnReqInval ENABLED
+set ns tcpParam -WS ENABLED -SACK ENABLED -nagle ENABLED
+set ns httpParam -dropInvalReqs ON -markHttp09Inval ON -markConnReqInval ON
 
-set ha mode -failsafe ON
+## HA
+set ha node -failsafe ON
+set ha node -maxFlips 3
+set ha node -maxFlipTime 1200
+set rpcNode ${NSIP} -password SuperSecretRPC1 -secure YES
+
+## SNMP
+set snmp manager ${SNMPIP}
+set snmp alarm CPU-USAGE -thresholdValue 95 -normalValue 35 -severity Informational
+set snmp alarm MEMORY -thresholdValue 95 -normalValue 35 -severity Critical
+set snmp alarm HA-STATE-CHANGE -severity Critical
+add snmp trap generic ${SNMPIP} -communityName public
+
+## Syslog - External
+add audit syslogAction AUDIT_ACT ${SYSLOG_SERVER_IP} -logLevel ALL
+add audit syslogPolicy AUDIT_POL true AUDIT_ACT
+bind audit syslogGlobal -policyName AUDIT_POL -priority 100
+
+## DNS
+add lb virtual server DNS_UDP DNS 0.0.0.0 0 -persistenceType NONE -cltTimeout 120
+add lb virtual server DNS_TCP DNS_TCP 0.0.0.0 0 -persistenceType NONE -cltTimeout 120
+
+add serviceGroup DNS_UDP_SVG DNS -maxClient 0 -maxReq 0 -cip DISABLED -usip NO -useproxyport NO -cltTimeout 120 -svrTimeout 120 -CKA NO -TCPB NO -CMP NO
+bind lb virtual server DNS_UDP DNS_UDP_SVG
+add serviceGroup DNS_TCP_SVG DNS_TCP -maxClient 0 -maxReq 0 -cip DISABLED -usip NO -useproxyport NO -cltTimeout 120 -svrTimeout 120 -CKA NO -TCPB NO -CMP NO
+bind lb virtual server DNS_TCP DNS_TCP_SVG
+
+add lb monitor DNS_UDP_monitor DNS -query . -queryType Address -LRTM DISABLED -interval 6 -resptimeout 3 -downTime 20 -destPort 53
+bind serviceGroup DNS_UDP_SVG -monitorName DNS_UDP_monitor
+add lb monitor DNS_TCP_monitor DNS-TCP -query . -queryType Address -LRTM DISABLED -interval 6 -resptimeout 3 -downTime 20 -destPort 53
+bind serviceGroup DNS_TCP_SVG -monitorName DNS_TCP_monitor
+
+bind serviceGroup DNS_UDP_SVG <DNSSERVERIP1> 53
+bind serviceGroup DNS_UDP_SVG <DNSSERVERIP2> 53
+bind serviceGroup DNS_TCP_SVG <DNSSERVERIP1> 53
+bind serviceGroup DNS_TCP_SVG <DNSSERVERIP2> 53
+
+add dns nameServer DNS_UDP -type UDP
+add dns nameServer DNS_TCP -type TCP
+
+add dns suffix ${DNS_SUFFIX}
+
+## NTP
+add ntp server ${NTP1}
+add ntp server ${NTP2}
+enable ntp sync
+
+## ADM Account
+
+add system user admsvc Password123 -externalAuth DISABLED -timeout 900
+bind system user admsvc superuser 100
+set system user admsvc -externalAuth DISABLED
+
+## SSL Hardening
+
+set ssl service nshttps-::1l-443 -ssl3 disabled -tls1 disabled
+set ssl service nshttps-127.0.0.1-443 -ssl3 disabled -tls1 disabled
 
 add ssl cipher SSL_Secure_CG
 bind ssl cipher SSL_Secure_CG -cipherName TLS1.3-CHACHA20-POLY1305-SHA256 -cipherPriority 1
@@ -32,3 +100,17 @@ bind ssl cipher SSL_Secure_CG -cipherName TLS1.2-ECDHE-ECDSA-AES128-GCM-SHA256 -
 bind ssl cipher SSL_Secure_CG -cipherName TLS1.2-ECDHE-RSA-CHACHA20-POLY1305 -cipherPriority 8
 bind ssl cipher SSL_Secure_CG -cipherName TLS1.2-ECDHE-ECDSA-CHACHA20-POLY1305 -cipherPriority 9
 bind ssl cipher SSL_Secure_CG -cipherName TLS1.2-ECDHE-RSA-AES256-GCM-SHA384 -cipherPriority 10
+
+set ssl parameter -defaultProfile ENABLED
+
+set ssl profile ns_default_ssl_profile_frontend -dh ENABLED -dhFile "/nsconfig/ssl/ECDHE.key"
+set ssl profile ns_default_ssl_profile_frontend -denySSLReneg NONSECURE -HSTS ENABLED -maxage 157680000
+bind ssl profile ns_default_ssl_profile_frontend -cipherName SSL_Secure_CG
+unbind ssl profile ns_default_ssl_profile_frontend -cipherName DEFAULT
+
+set ssl profile ns_default_ssl_profile_backend -denySSLReneg NONSECURE
+bind ssl profile ns_default_ssl_profile_backend -cipherName SSL_Secure_CG
+unbind ssl profile ns_default_ssl_profile_backend -cipherName DEFAULT_BACKEND
+
+set ssl profile ns_default_ssl_profile_frontend -tls1 DISABLED -tls11 DISABLED -tls12 ENABLED -tls13 ENABLED
+set ssl profile ns_default_ssl_profile_backend -tls1 DISABLED -tls11 DISABLED -tls12 ENABLED -tls13 ENABLED
