--- a/base.conf
+++ b/base.conf
@@ -1,24 +1,21 @@
 ######
 # New Citrix ADC Deployment Parameters
-# Jacob Wilson - jwilson@SSL.us
-#
-# Variables
-# ${HOSTNAME} - Hostname of ADC (Requires Reboot)
-# ${NSIP} - NSIP of ADC
+# Jacob Wilson - jwilson@agsi.us
 #
 # Manual Operations
 # - Disable Unused Interfaces
 # - Disable HAMON on Disabled Interfaces AND member interfaces of monitored channels
 # - create dhParam /nsconfig/ssl/ECDHE.key -gen 5 2048
+#
 ######
 
 set system user nsroot -password SuperSecretPW1
+set system user nsroot -externalAuth DISABLED
 
 ## System
 set ns hostName ${HOSTNAME}
 set ns param -cip ENABLED X-Forwarded-For -cookieversion 1 -timezone "GMT-04:00-EDT-America/New_York"
 set system parameter -promptString "%u@%h-%s"
-set system user nsroot -externalAuth DISABLED
 set cli mode -color ON
 enable ns feature LB CS SSL GSLB REWRITE RESPONDER CMP
 disable ns mode L3 Edge
@@ -45,7 +42,7 @@ set snmp alarm HA-STATE-CHANGE -severity Critical
 add snmp trap generic ${SNMPIP} -communityName public
 
 ## Syslog - External
-add audit syslogAction AUDIT_ACT ${SYSLOG_SERVER_IP} -logLevel ALL
+add audit syslogAction AUDIT_ACT ${SYSLOGIP} -logLevel ALL
 add audit syslogPolicy AUDIT_POL true AUDIT_ACT
 bind audit syslogGlobal -policyName AUDIT_POL -priority 100
 
