--- a/base.conf
+++ b/base.conf
@@ -2,11 +2,12 @@
 # New Citrix ADC Deployment Parameters
 # Jacob Wilson - jwilson@agsi.us
 #
-# Manual Operations
+# Manual 
+# - Reset LOM >ipmitool raw 0x30 0x41 0x1
 # - Disable Unused Interfaces
 # - Disable HAMON on Disabled Interfaces AND member interfaces of monitored channels
 # - create dhParam /nsconfig/ssl/ECDHE.key -gen 5 2048
-#
+# - LDAP Config
 ######
 
 set system user nsroot -password SuperSecretPW1
@@ -27,6 +28,7 @@ set ns tcpProfile nstcp_default_profile -WS ENABLED -SACK ENABLED -nagle ENABLED
 set ns httpProfile nshttp_default_profile -dropInvalReqs ENABLED -markHttp09Inval ENABLED -markConnReqInval ENABLED
 set ns tcpParam -WS ENABLED -SACK ENABLED -nagle ENABLED
 set ns httpParam -dropInvalReqs ON -markHttp09Inval ON -markConnReqInval ON
+set lb parameter -HttpOnlyCookieFlag ENABLED -UseEncryptedPersistenceCookie ENABLED -cookiePassphrase CookiePassword
 
 ## HA
 set ha node -failsafe ON
